fix alignment issues with banner area text and sidebar

--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,6 @@ a {
 
 .mp-head-right ul, li {
 	float: left;
-
 }
 
 .mp-head-left {
@@ -102,8 +101,8 @@ a {
 /*end of Welcome to WikiHeader*/
 
 #topLinks {
-	position:fixed;
-	top:120px;
+	position:absolute;
+	top:50px;
 	left:1400px;
 }
 
@@ -121,8 +120,17 @@ a {
 #mp-topbanner {
 	position: fixed;
 	left:200px;
-	top:98px
-	border: 2px solid black;
+	top:98px;
+}
+
+.mainPageHeader ul #Main {
+	position: fixed;
+	left:150px;
+}
+
+.mainPageHeader ul #MainPage {
+	position: fixed;
+	left: 220px;
 }
 
 .mp-head-right ul{
